| Summary: | ASTERISK-28333: StasisEnd event makes wrong timestamp value | ||
| Reporter: | sungtae kim (pchero) | Labels: | |
| Date Opened: | 2019-03-10 17:49:45 | Date Closed: | 2019-03-19 09:28:30 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Resources/res_stasis |
| Versions: | 16.2.1 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | The timestamp for the StasisEnd event uses ast_json_timeval(ast_tvnow(), NULL). But this makes wrong timestamp.
Because other ari event(ChannelDestroyed) uses channel's timestamp, sometimes the StasisEnd's timestamp is later than ChannelDestroyed event which is not correct. It is very tiny timestamp different(0.002 sec), but it makes hard to use(depends on) the event's timestamp. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2019-03-10 17:49:47.098-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. By: Friendly Automation (friendly-automation) 2019-03-19 09:28:31.097-0500 Change 11126 merged by George Joseph: res/res_stasis: Fixed wrong StasisEnd timestamp [https://gerrit.asterisk.org/c/asterisk/+/11126|https://gerrit.asterisk.org/c/asterisk/+/11126] By: Friendly Automation (friendly-automation) 2019-03-19 09:28:39.547-0500 Change 11133 merged by George Joseph: res/res_stasis: Fixed wrong StasisEnd timestamp [https://gerrit.asterisk.org/c/asterisk/+/11133|https://gerrit.asterisk.org/c/asterisk/+/11133] By: Friendly Automation (friendly-automation) 2019-03-19 09:28:48.046-0500 Change 11134 merged by George Joseph: res/res_stasis: Fixed wrong StasisEnd timestamp [https://gerrit.asterisk.org/c/asterisk/+/11134|https://gerrit.asterisk.org/c/asterisk/+/11134] | ||